--- a/assets/style.css
+++ b/assets/style.css
@@ -4,23 +4,57 @@
     margin: 0px;
 }
 
-#topBar {
-    margin: auto;
-    padding-top: 15px;
+:root{
+    --lightShade: rgb(167, 71, 54);
+    --darkShade: rgb(53, 78, 133);
+    --darkAccent: rgb(46, 36, 34);
+}
+
+.container {
     width: 95%;
+    margin: auto;
+}
+
+p {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 18pt;
+    color: #333333;
+}
+
+h1 {
+    width: 100%;
+    padding: 15px 0 15px 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40pt;
+    font-weight: bold;
+    color: #fff;
+    background-color: var(--lightShade);
+}
+
+btn {
+    width: 20%;
+    background-color: var(--darkShade);
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14pt;
+    color: #fff;    
+}
+
+/*top bar with highScore and timer*/
+#topBar {
+    padding-top: 15px;
     display: flex;
     align-items: center;
-    justify-content:space-between;    
+    justify-content: space-between;    
     flex-direction: row;
-    border: 1px solid #333;
 }
 
 #highScore {
     font-size: 18pt;
     font-family:Arial, Helvetica, sans-serif;
+    font-weight: bold;
     color: #333;
     text-align: left;
-    border: 1px solid #333;
 }
 
 #timer {
@@ -28,6 +62,44 @@
     font-family:Arial, Helvetica, sans-serif;
     color: #333;
     text-align: right;
-    border: 1px solid #333;
 }
 
+/*main sections: welcome, question, hsEntry & scoreList*/
+
+/*styles and positioning for all*/
+.newScreen {
+    width: 80%;
+    margin: 100px auto auto auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+/*styling for individual elements*/
+
+#welcome {
+    text-align: center;
+    padding: 5px 0 5px 0;
+    align-items: center;
+    border: 4px solid var(--darkAccent); 
+}
+
+#welcome p {
+    padding: 15px 0 30px 0;
+}
+
+#startQuiz {
+    margin-bottom: 30px;
+}
+
+#question {
+    display: none;
+}
+
+#hsEntry {
+    display: none;
+}
+
+#scoreList {
+    display: none;
+}
