--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,9 @@
     --lightShade: rgb(167, 71, 54);
     --darkShade: rgb(53, 78, 133);
     --darkAccent: rgb(46, 36, 34);
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18pt;
 }
 
 .container {
@@ -16,26 +19,34 @@
 }
 
 p {
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 18pt;
     color: #333333;
 }
 
 h1 {
     width: 100%;
     padding: 15px 0 15px 0;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 40pt;
     font-weight: bold;
     color: #fff;
     background-color: var(--lightShade);
 }
 
+h2 {
+    width: 100%;
+    padding: 15px;
+    font-size: 30pt;
+    color: var(--lightShade);
+}
+
+ul{
+    width: fit-content;
+    padding: 15px;
+}
+
 btn {
     width: 20%;
     background-color: var(--darkShade);
     padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 14pt;
     color: #fff;    
 }
@@ -51,7 +62,6 @@ btn {
 
 #highScore {
     font-size: 18pt;
-    font-family:Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: #333;
     text-align: left;
@@ -59,7 +69,6 @@ btn {
 
 #timer {
     font-size: 18pt;
-    font-family:Arial, Helvetica, sans-serif;
     color: #333;
     text-align: right;
 }
@@ -70,14 +79,16 @@ btn {
 .newScreen {
     width: 80%;
     margin: 100px auto auto auto;
-    display: flex;
+    display: none;
     justify-content: center;
     flex-direction: column;
 }
 
 /*styling for individual elements*/
 
+/*welcome screen*/
 #welcome {
+    display: flex;
     text-align: center;
     padding: 5px 0 5px 0;
     align-items: center;
@@ -92,14 +103,22 @@ btn {
     margin-bottom: 30px;
 }
 
+/*Question and answer screen*/
 #question {
-    display: none;
+    padding: 5px;
+    text-align: left;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
+
+
+/*Enter high score screen*/
 #hsEntry {
     display: none;
 }
 
+/*past high scores screen*/
 #scoreList {
     display: none;
 }
